--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,9 +5,9 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.crazyhitty.chdev.ks.munch"
+        applicationId "com.ellimist.jazzmedia"
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 22
         versionCode 14
         versionName "0.44"
         vectorDrawables.useSupportLibrary = true
